[package]
name = "cairo-toolchain-xtasks"
version = "1.0.0"
edition = "2021"
rust-version = "1.83.0"

authors = ["Software Mansion <contact@swmansion.com>"]
description = "Build scripts shared between all Cairo Toolchain projects maintained by Software Mansion."
license = "MIT"
repository = "https://github.com/software-mansion-labs/cairo-toolchain-xtasks"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
semver = "1"
toml_edit = "0.22.22"
xshell = "0.2.7"
